force-app/main/default/objects/ContractShipToAccount__c/ContractShipToAccount__c.object-meta.xml
<CustomObject>
    <label>Contract Ship-to Account</label>
    <nameField>
        <displayFormat>ContractShipTo-{0000}</displayFormat>
        <label>Contract Ship-to Account Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Ship-to Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>