force-app/main/default/objects/ContractShipToAccount__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Ship-to account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contract ship-to accounts</relationshipLabel>
    <relationshipName>ContractShipToAccounts</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>