force-app/main/default/objects/ContractShipToAccount__c/fields/BillToAccount__c.field-meta.xml
<CustomField>
    <fullName>BillToAccount__c</fullName>
    <description>This field is populated using the before insert trigger.</description>
    <formula>Contract__r.BillToAccount__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bill-to account</label>
    <type>Text</type>
</CustomField>