force-app/main/default/objects/ContractShipToAccount__c/fields/ContractSignedDate__c.field-meta.xml
<CustomField>
    <fullName>ContractSignedDate__c</fullName>
    <formula>Contract__r.ContractSignedDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Signed Date</label>
    <type>Date</type>
</CustomField>