force-app/main/default/objects/ContractShipToAccount__c/recordTypes/WorkdayGroupContract.recordType-meta.xml
<RecordType>
    <fullName>WorkdayGroupContract</fullName>
    <active>true</active>
    <label>Workday Group Contract</label>
</RecordType>